# oooq-site-config-ci-centos

./: .gitreview  groups  project.config  setup.cfg
ci-scripts/: full-deploy-baremetal.sh  images.sh
