[metadata]
name = ansible-role-tripleo-inventory
summary = ansible-role-tripleo-inventory - A ansible role for deploying a tripleo overcloud
description-file =
    README.md
author = RDO-CI Team
author-email =  whayutin@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-inventory
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    tripleo-quickstart/ci-scripts = ci-scripts/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
